--- a/Zontik/packages.config
+++ b/Zontik/packages.config
@@ -4,4 +4,5 @@
   <package id="NLog" version="4.7.5" targetFramework="net472" />
   <package id="NLog.Config" version="4.7.5" targetFramework="net472" />
   <package id="NLog.Schema" version="4.7.5" targetFramework="net472" />
+  <package id="Topshelf" version="4.2.1" targetFramework="net472" />
 </packages>
