--- a/Zontik/App.config
+++ b/Zontik/App.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
+  <appSettings>    
+    
     <add key="host" value="127.0.0.1" />
     <add key="port" value="6160" />
     <add key="X-Yandex-API-Key" value="9d36780e-1a29-4590-83ff-22811f088cee" />
     <add key="Time_Loop" value="0 * * * *" />
+    
+    <add key="ProxyServerIp" value="192.168.242.5" />
+    <add key="ProxyServerPort" value="9999" />
+    
+    
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
