--- a/Zontik/App.config
+++ b/Zontik/App.config
@@ -4,7 +4,7 @@
     
     <add key="host" value="127.0.0.1" />
     <add key="port" value="6160" />
-    <add key="X-Yandex-API-Key" value="9d36780e-1a29-4590-83ff-22811f088cee" />
+    <add key="X-Gismeteo-Token" value="3082135acbaea6.cb53a1e8" />
     <add key="Time_Loop" value="0 * * * *" />
     
     <add key="ProxyServerIp" value="192.168.242.5" />
