--- a/Zontik/Zontik.csproj
+++ b/Zontik/Zontik.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleMessage.cs" />
+    <Compile Include="GisMeteoWeatherAPI.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
