--- a/Zontik/Zontik.csproj
+++ b/Zontik/Zontik.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SendToVizEngine.cs" />
     <Compile Include="Weather.cs" />
+    <Compile Include="WeatherGis.cs" />
+    <Compile Include="WeatherYan.cs" />
     <Compile Include="XmlReadItem.cs" />
     <Compile Include="YandexWeatherAPI.cs" />
     <Compile Include="ZontikMainService.cs" />
