Added old log cleaner. Now if error came from weather server it tries a few times then it goes to the next iteration

--- a/Zontik/App.config
+++ b/Zontik/App.config
@@ -4,10 +4,9 @@
     
     <add key="host" value="127.0.0.1" />
     <add key="port" value="6160" />
-    <add key="API_switch" value="1" /> <!--"1" - GisMeteo; "2" - Yandex -->
-    <add key="X-Yandex-API-Key" value="b26e12b9-739e-4942-bb24-6897a3c11a07" />
     <add key="X-Gismeteo-Token" value="3082135acbaea6.cb53a1e8" />
     <add key="Time_Loop" value="0 * * * *" />
+    <add key="Clear_Old_Logs" value="* 15 * * *" />
     
     <add key="ProxyServerIp" value="192.168.242.5" /> 
     <add key="ProxyServerPort" value="9999" />
