Thread.Sleep of WebException lowered from 60000 until 1000ms

--- a/Zontik/NLog.config
+++ b/Zontik/NLog.config
@@ -22,8 +22,8 @@
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
     See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
     -->
-    <target xsi:type="File" name="main" fileName="${basedir}/logs/${shortdate}.log" layout="${longdate} | ${callsite} | ${uppercase:${level}} | ${message} ${newline}" />
-    <target xsi:type="File" name="error" fileName="${basedir}/logs/errors/${shortdate}.log" layout="${longdate} | ${callsite} | ${uppercase:${level}} | ${message} ${newline}" />
+    <target xsi:type="File" name="main" fileName="${basedir}/logs/${shortdate}.log" layout="${date} | ${callsite} | ${uppercase:${level}} | ${message} ${newline}" />
+    <target xsi:type="File" name="error" fileName="${basedir}/logs/errors/${shortdate}.log" layout="${date} | ${callsite} | ${uppercase:${level}} | ${message} ${newline}" />
     <!--
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
