--- a/Zontik/App.config
+++ b/Zontik/App.config
@@ -2,11 +2,10 @@
 <configuration>
   <appSettings>    
     
-    <add key="host" value="127.0.0.1" />
     <add key="port" value="6160" />
     <add key="X-Gismeteo-Token" value="3082135acbaea6.cb53a1e8" />
-    <add key="Time_Loop" value="5 * * * *" />
-    <add key="Clear_Old_Logs" value="* 11 * * *" />
+    <add key="Time_Loop" value="0 * * * *" />
+    <add key="Clear_Old_Logs" value="0 11 * * *" />
     
     <add key="ProxyServerIp" value="10.10.110.115" /> 
     <add key="ProxyServerPort" value="9999" />
