--- a/Zontik/Zontik.csproj
+++ b/Zontik/Zontik.csproj
@@ -35,10 +35,6 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cron, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\Cron.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -66,6 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleMessage.cs" />
+    <Compile Include="CronNET\CronDaemon.cs" />
+    <Compile Include="CronNET\CronJob.cs" />
+    <Compile Include="CronNET\CronSchedule.cs" />
     <Compile Include="GisMeteoWeatherAPI.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
@@ -84,6 +83,7 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="CronNET\ClassDiagram1.cd" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
